WANPIPE TDM VOICE - IP/WAN Package

------------------------------------------------------------------------------
Author: Nenad Corbic <ncorbic@sangoma.com>
Copyright (c) 1995-2016 Sangoma Technologies Inc.

For more info visit: http://wiki.sangoma.com
------------------------------------------------------------------------------

* May 9 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.19
==================================================================
- Add RM_RING_DEBOUNCE config option
- Fix for Centos 5 build
- Update to fake polarity feature. Reset fake polarity timeout
  on each ring. We do not want fake polarity triggering during rings.
- Update to fake polarity feature.
- More reliable for DTMF caller id scenarios. 
- RM_FAKE_POLARITY_THRESHOLD should be 16000 


* Mar 17 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.18
==================================================================
- Driver will start by default even though analog FXS/FXO module failed to configure.
  New config parameters: RM_FAIL_ON_MOD_ERROR=YES will revert this behaviour.
- Fake polarity feature is now configurable
  New config parameters with their default values if not set
  RM_FAKE_POLARITY=NO  #Default is NO.
  RM_FAKE_POLARITY_THRESHOLD=16000
  RM_FAKE_POLARITY_CIDTIMER=400
  RM_FAKE_POLARITY_CIDTIMEOUT=4000


* Mon Feb 03 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.16
==================================================================
- FreePBX fwconsole support in wancfg_zaptel.pl
- Reduced the clock sync error polling: can cause massive printing in bad
clock conditions
- Support for DAHDI 2.11


* Mon Nov 21 2015 Nenad Corbic <ncorbic@sangoma.com> -  7.0.15
==================================================================


- Support for 4.3 kernels
- Updated T1/E1 Alarm debouncing
  Fixes RAI alarm issues detected on some Indian E1 lines.
- Added a global limit to max printed error messages per sec.
  Protects the Server from over logging
- Updated wanec stats