@@ -1,2 +1,2 @@
-wanpipe_linux: git ver 0c588de
-wanpipe_common: git ver c06ba21
+wanpipe_linux: git ver 152b9f5
+wanpipe_common: git ver 8b632be
