@@ -1,1 +1,1 @@
-wanpipe-7.0.19
+wanpipe-7.0.20
