@@ -8,7 +8,12 @@ Copyright (c) 1995-2016 Sangoma Technologies Inc.
 For more info visit: http://wiki.sangoma.com
 ------------------------------------------------------------------------------
 
-* May 9 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.19
+* Mon May 19 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.20
+==================================================================
+- Compilation fix in non-dahdi mode
+- Default to fe poll mode.
+
+* Mon May 9 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.19
 ==================================================================
 - Add RM_RING_DEBOUNCE config option
 - Fix for Centos 5 build
@@ -19,7 +24,7 @@ For more info visit: http://wiki.sangoma.com
 - RM_FAKE_POLARITY_THRESHOLD should be 16000 
 
 
-* Mar 17 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.18
+* Mon Mar 17 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.18
 ==================================================================
 - Driver will start by default even though analog FXS/FXO module failed to configure.
   New config parameters: RM_FAIL_ON_MOD_ERROR=YES will revert this behaviour.
